--- a/app_usb_aud_xk_evk_xu316_dsp/dsp_design.ipynb
+++ b/app_usb_aud_xk_evk_xu316_dsp/dsp_design.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "f3806bd0-99e0-42b6-a084-e9a2f17ba7dc",
    "metadata": {},
    "outputs": [
@@ -29,99 +29,99 @@
        "<polygon fill=\"none\" stroke=\"black\" points=\"38,-64 38,-211 130,-211 130,-64 38,-64\"/>\n",
        "<text text-anchor=\"middle\" x=\"84\" y=\"-195.8\" font-family=\"Times,serif\" font-size=\"14.00\">thread 1</text>\n",
        "</g>\n",
-       "<!-- 402148dbf6a54854a856761559d9bca5 -->\n",
+       "<!-- 720f5c83a1794182a600f25b701af31e -->\n",
        "<g id=\"node1\" class=\"node\">\n",
-       "<title>402148dbf6a54854a856761559d9bca5</title>\n",
+       "<title>720f5c83a1794182a600f25b701af31e</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"84\" cy=\"-317\" rx=\"68.49\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"84\" y=\"-313.3\" font-family=\"Times,serif\" font-size=\"14.00\">0: ParametricEq</text>\n",
        "</g>\n",
-       "<!-- b992fa5d84c349bca98c984149d3be9d -->\n",
+       "<!-- c3f67362f152430dbb48eeb344e7bbc4 -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>b992fa5d84c349bca98c984149d3be9d</title>\n",
+       "<title>c3f67362f152430dbb48eeb344e7bbc4</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"84\" cy=\"-245\" rx=\"68.49\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"84\" y=\"-241.3\" font-family=\"Times,serif\" font-size=\"14.00\">1: ParametricEq</text>\n",
        "</g>\n",
-       "<!-- 402148dbf6a54854a856761559d9bca5&#45;&gt;b992fa5d84c349bca98c984149d3be9d -->\n",
+       "<!-- 720f5c83a1794182a600f25b701af31e&#45;&gt;c3f67362f152430dbb48eeb344e7bbc4 -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
-       "<title>402148dbf6a54854a856761559d9bca5&#45;&gt;b992fa5d84c349bca98c984149d3be9d</title>\n",
+       "<title>720f5c83a1794182a600f25b701af31e&#45;&gt;c3f67362f152430dbb48eeb344e7bbc4</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M66.48,-299.41C63.83,-291.3 63.11,-281.35 64.32,-272.25\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"67.74,-272.99 66.52,-262.47 60.91,-271.46 67.74,-272.99\"/>\n",
        "</g>\n",
-       "<!-- 402148dbf6a54854a856761559d9bca5&#45;&gt;b992fa5d84c349bca98c984149d3be9d -->\n",
+       "<!-- 720f5c83a1794182a600f25b701af31e&#45;&gt;c3f67362f152430dbb48eeb344e7bbc4 -->\n",
        "<g id=\"edge6\" class=\"edge\">\n",
-       "<title>402148dbf6a54854a856761559d9bca5&#45;&gt;b992fa5d84c349bca98c984149d3be9d</title>\n",
+       "<title>720f5c83a1794182a600f25b701af31e&#45;&gt;c3f67362f152430dbb48eeb344e7bbc4</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M78.12,-299.05C77.3,-291.35 77.06,-282.03 77.39,-273.36\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"80.89,-273.49 78.09,-263.28 73.91,-273.01 80.89,-273.49\"/>\n",
        "</g>\n",
-       "<!-- 402148dbf6a54854a856761559d9bca5&#45;&gt;b992fa5d84c349bca98c984149d3be9d -->\n",
+       "<!-- 720f5c83a1794182a600f25b701af31e&#45;&gt;c3f67362f152430dbb48eeb344e7bbc4 -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
-       "<title>402148dbf6a54854a856761559d9bca5&#45;&gt;b992fa5d84c349bca98c984149d3be9d</title>\n",
+       "<title>720f5c83a1794182a600f25b701af31e&#45;&gt;c3f67362f152430dbb48eeb344e7bbc4</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M89.88,-299.05C90.7,-291.35 90.94,-282.03 90.61,-273.36\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"94.09,-273.01 89.91,-263.28 87.11,-273.49 94.09,-273.01\"/>\n",
        "</g>\n",
-       "<!-- 402148dbf6a54854a856761559d9bca5&#45;&gt;b992fa5d84c349bca98c984149d3be9d -->\n",
+       "<!-- 720f5c83a1794182a600f25b701af31e&#45;&gt;c3f67362f152430dbb48eeb344e7bbc4 -->\n",
        "<g id=\"edge8\" class=\"edge\">\n",
-       "<title>402148dbf6a54854a856761559d9bca5&#45;&gt;b992fa5d84c349bca98c984149d3be9d</title>\n",
+       "<title>720f5c83a1794182a600f25b701af31e&#45;&gt;c3f67362f152430dbb48eeb344e7bbc4</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M101.52,-299.41C104.17,-291.3 104.89,-281.35 103.68,-272.25\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"107.09,-271.46 101.48,-262.47 100.26,-272.99 107.09,-271.46\"/>\n",
        "</g>\n",
-       "<!-- 6efe729ddbdd4140912772aec05d7168 -->\n",
+       "<!-- 82251b6517ed4c91a10832c2e16a2d31 -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>6efe729ddbdd4140912772aec05d7168</title>\n",
+       "<title>82251b6517ed4c91a10832c2e16a2d31</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"84\" cy=\"-162\" rx=\"38.19\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"84\" y=\"-158.3\" font-family=\"Times,serif\" font-size=\"14.00\">2: AGC</text>\n",
        "</g>\n",
-       "<!-- b992fa5d84c349bca98c984149d3be9d&#45;&gt;6efe729ddbdd4140912772aec05d7168 -->\n",
+       "<!-- c3f67362f152430dbb48eeb344e7bbc4&#45;&gt;82251b6517ed4c91a10832c2e16a2d31 -->\n",
        "<g id=\"edge9\" class=\"edge\">\n",
-       "<title>b992fa5d84c349bca98c984149d3be9d&#45;&gt;6efe729ddbdd4140912772aec05d7168</title>\n",
+       "<title>c3f67362f152430dbb48eeb344e7bbc4&#45;&gt;82251b6517ed4c91a10832c2e16a2d31</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M67.22,-227.22C63.48,-215.99 62.76,-201.02 65.06,-188.35\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"68.53,-188.95 67.71,-178.39 61.76,-187.16 68.53,-188.95\"/>\n",
        "</g>\n",
-       "<!-- b992fa5d84c349bca98c984149d3be9d&#45;&gt;6efe729ddbdd4140912772aec05d7168 -->\n",
+       "<!-- c3f67362f152430dbb48eeb344e7bbc4&#45;&gt;82251b6517ed4c91a10832c2e16a2d31 -->\n",
        "<g id=\"edge10\" class=\"edge\">\n",
-       "<title>b992fa5d84c349bca98c984149d3be9d&#45;&gt;6efe729ddbdd4140912772aec05d7168</title>\n",
+       "<title>c3f67362f152430dbb48eeb344e7bbc4&#45;&gt;82251b6517ed4c91a10832c2e16a2d31</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M78.36,-226.82C77.21,-216.12 76.95,-202.12 77.6,-189.96\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"81.1,-190.12 78.4,-179.88 74.12,-189.57 81.1,-190.12\"/>\n",
        "</g>\n",
-       "<!-- b992fa5d84c349bca98c984149d3be9d&#45;&gt;6efe729ddbdd4140912772aec05d7168 -->\n",
+       "<!-- c3f67362f152430dbb48eeb344e7bbc4&#45;&gt;82251b6517ed4c91a10832c2e16a2d31 -->\n",
        "<g id=\"edge11\" class=\"edge\">\n",
-       "<title>b992fa5d84c349bca98c984149d3be9d&#45;&gt;6efe729ddbdd4140912772aec05d7168</title>\n",
+       "<title>c3f67362f152430dbb48eeb344e7bbc4&#45;&gt;82251b6517ed4c91a10832c2e16a2d31</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M89.64,-226.82C90.79,-216.12 91.05,-202.12 90.4,-189.96\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"93.88,-189.57 89.6,-179.88 86.9,-190.12 93.88,-189.57\"/>\n",
        "</g>\n",
-       "<!-- b992fa5d84c349bca98c984149d3be9d&#45;&gt;6efe729ddbdd4140912772aec05d7168 -->\n",
+       "<!-- c3f67362f152430dbb48eeb344e7bbc4&#45;&gt;82251b6517ed4c91a10832c2e16a2d31 -->\n",
        "<g id=\"edge12\" class=\"edge\">\n",
-       "<title>b992fa5d84c349bca98c984149d3be9d&#45;&gt;6efe729ddbdd4140912772aec05d7168</title>\n",
+       "<title>c3f67362f152430dbb48eeb344e7bbc4&#45;&gt;82251b6517ed4c91a10832c2e16a2d31</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M100.78,-227.22C104.52,-215.99 105.24,-201.02 102.94,-188.35\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"106.24,-187.16 100.29,-178.39 99.47,-188.95 106.24,-187.16\"/>\n",
        "</g>\n",
-       "<!-- 599995f21ea94d7fbf09be97b1b3561a -->\n",
+       "<!-- 3b38446f9f3342ceb984f8ac1ff822b2 -->\n",
        "<g id=\"node4\" class=\"node\">\n",
-       "<title>599995f21ea94d7fbf09be97b1b3561a</title>\n",
+       "<title>3b38446f9f3342ceb984f8ac1ff822b2</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"84\" cy=\"-90\" rx=\"38.19\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"84\" y=\"-86.3\" font-family=\"Times,serif\" font-size=\"14.00\">3: AGC</text>\n",
        "</g>\n",
-       "<!-- 6efe729ddbdd4140912772aec05d7168&#45;&gt;599995f21ea94d7fbf09be97b1b3561a -->\n",
+       "<!-- 82251b6517ed4c91a10832c2e16a2d31&#45;&gt;3b38446f9f3342ceb984f8ac1ff822b2 -->\n",
        "<g id=\"edge13\" class=\"edge\">\n",
-       "<title>6efe729ddbdd4140912772aec05d7168&#45;&gt;599995f21ea94d7fbf09be97b1b3561a</title>\n",
+       "<title>82251b6517ed4c91a10832c2e16a2d31&#45;&gt;3b38446f9f3342ceb984f8ac1ff822b2</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M66.96,-145.81C63.78,-137.1 62.96,-125.94 64.51,-115.97\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"67.93,-116.71 66.98,-106.16 61.14,-115 67.93,-116.71\"/>\n",
        "</g>\n",
-       "<!-- 6efe729ddbdd4140912772aec05d7168&#45;&gt;599995f21ea94d7fbf09be97b1b3561a -->\n",
+       "<!-- 82251b6517ed4c91a10832c2e16a2d31&#45;&gt;3b38446f9f3342ceb984f8ac1ff822b2 -->\n",
        "<g id=\"edge14\" class=\"edge\">\n",
-       "<title>6efe729ddbdd4140912772aec05d7168&#45;&gt;599995f21ea94d7fbf09be97b1b3561a</title>\n",
+       "<title>82251b6517ed4c91a10832c2e16a2d31&#45;&gt;3b38446f9f3342ceb984f8ac1ff822b2</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M78.12,-144.05C77.29,-136.23 77.05,-126.75 77.41,-117.98\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"80.92,-118.01 78.14,-107.79 73.93,-117.51 80.92,-118.01\"/>\n",
        "</g>\n",
-       "<!-- 6efe729ddbdd4140912772aec05d7168&#45;&gt;599995f21ea94d7fbf09be97b1b3561a -->\n",
+       "<!-- 82251b6517ed4c91a10832c2e16a2d31&#45;&gt;3b38446f9f3342ceb984f8ac1ff822b2 -->\n",
        "<g id=\"edge15\" class=\"edge\">\n",
-       "<title>6efe729ddbdd4140912772aec05d7168&#45;&gt;599995f21ea94d7fbf09be97b1b3561a</title>\n",
+       "<title>82251b6517ed4c91a10832c2e16a2d31&#45;&gt;3b38446f9f3342ceb984f8ac1ff822b2</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M89.88,-144.05C90.71,-136.23 90.95,-126.75 90.59,-117.98\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"94.07,-117.51 89.86,-107.79 87.08,-118.01 94.07,-117.51\"/>\n",
        "</g>\n",
-       "<!-- 6efe729ddbdd4140912772aec05d7168&#45;&gt;599995f21ea94d7fbf09be97b1b3561a -->\n",
+       "<!-- 82251b6517ed4c91a10832c2e16a2d31&#45;&gt;3b38446f9f3342ceb984f8ac1ff822b2 -->\n",
        "<g id=\"edge16\" class=\"edge\">\n",
-       "<title>6efe729ddbdd4140912772aec05d7168&#45;&gt;599995f21ea94d7fbf09be97b1b3561a</title>\n",
+       "<title>82251b6517ed4c91a10832c2e16a2d31&#45;&gt;3b38446f9f3342ceb984f8ac1ff822b2</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M101.04,-145.81C104.22,-137.1 105.04,-125.94 103.49,-115.97\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"106.86,-115 101.02,-106.16 100.07,-116.71 106.86,-115\"/>\n",
        "</g>\n",
@@ -131,27 +131,27 @@
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"84\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"84\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">end</text>\n",
        "</g>\n",
-       "<!-- 599995f21ea94d7fbf09be97b1b3561a&#45;&gt;end -->\n",
+       "<!-- 3b38446f9f3342ceb984f8ac1ff822b2&#45;&gt;end -->\n",
        "<g id=\"edge17\" class=\"edge\">\n",
-       "<title>599995f21ea94d7fbf09be97b1b3561a&#45;&gt;end</title>\n",
+       "<title>3b38446f9f3342ceb984f8ac1ff822b2&#45;&gt;end</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M66.96,-73.81C63.62,-64.64 62.88,-52.77 64.77,-42.42\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"68.15,-43.31 67.53,-32.74 61.42,-41.39 68.15,-43.31\"/>\n",
        "</g>\n",
-       "<!-- 599995f21ea94d7fbf09be97b1b3561a&#45;&gt;end -->\n",
+       "<!-- 3b38446f9f3342ceb984f8ac1ff822b2&#45;&gt;end -->\n",
        "<g id=\"edge18\" class=\"edge\">\n",
-       "<title>599995f21ea94d7fbf09be97b1b3561a&#45;&gt;end</title>\n",
+       "<title>3b38446f9f3342ceb984f8ac1ff822b2&#45;&gt;end</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M78.12,-72.05C77.29,-64.23 77.05,-54.75 77.41,-45.98\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"80.92,-46.01 78.14,-35.79 73.93,-45.51 80.92,-46.01\"/>\n",
        "</g>\n",
-       "<!-- 599995f21ea94d7fbf09be97b1b3561a&#45;&gt;end -->\n",
+       "<!-- 3b38446f9f3342ceb984f8ac1ff822b2&#45;&gt;end -->\n",
        "<g id=\"edge19\" class=\"edge\">\n",
-       "<title>599995f21ea94d7fbf09be97b1b3561a&#45;&gt;end</title>\n",
+       "<title>3b38446f9f3342ceb984f8ac1ff822b2&#45;&gt;end</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M89.88,-72.05C90.71,-64.23 90.95,-54.75 90.59,-45.98\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"94.07,-45.51 89.86,-35.79 87.08,-46.01 94.07,-45.51\"/>\n",
        "</g>\n",
-       "<!-- 599995f21ea94d7fbf09be97b1b3561a&#45;&gt;end -->\n",
+       "<!-- 3b38446f9f3342ceb984f8ac1ff822b2&#45;&gt;end -->\n",
        "<g id=\"edge20\" class=\"edge\">\n",
-       "<title>599995f21ea94d7fbf09be97b1b3561a&#45;&gt;end</title>\n",
+       "<title>3b38446f9f3342ceb984f8ac1ff822b2&#45;&gt;end</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M101.04,-73.81C104.38,-64.64 105.12,-52.77 103.23,-42.42\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"106.58,-41.39 100.47,-32.74 99.85,-43.31 106.58,-41.39\"/>\n",
        "</g>\n",
@@ -161,27 +161,27 @@
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"84\" cy=\"-392\" rx=\"27\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"84\" y=\"-388.3\" font-family=\"Times,serif\" font-size=\"14.00\">start</text>\n",
        "</g>\n",
-       "<!-- start&#45;&gt;402148dbf6a54854a856761559d9bca5 -->\n",
+       "<!-- start&#45;&gt;720f5c83a1794182a600f25b701af31e -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>start&#45;&gt;402148dbf6a54854a856761559d9bca5</title>\n",
+       "<title>start&#45;&gt;720f5c83a1794182a600f25b701af31e</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M67.77,-377.27C63.98,-368.07 62.87,-355.65 64.43,-344.56\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"67.92,-345.01 66.75,-334.48 61.1,-343.44 67.92,-345.01\"/>\n",
        "</g>\n",
-       "<!-- start&#45;&gt;402148dbf6a54854a856761559d9bca5 -->\n",
+       "<!-- start&#45;&gt;720f5c83a1794182a600f25b701af31e -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>start&#45;&gt;402148dbf6a54854a856761559d9bca5</title>\n",
+       "<title>start&#45;&gt;720f5c83a1794182a600f25b701af31e</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M78.2,-374.07C77.27,-365.47 77.03,-354.81 77.45,-345.11\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"80.95,-345.32 78.18,-335.09 73.96,-344.81 80.95,-345.32\"/>\n",
        "</g>\n",
-       "<!-- start&#45;&gt;402148dbf6a54854a856761559d9bca5 -->\n",
+       "<!-- start&#45;&gt;720f5c83a1794182a600f25b701af31e -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>start&#45;&gt;402148dbf6a54854a856761559d9bca5</title>\n",
+       "<title>start&#45;&gt;720f5c83a1794182a600f25b701af31e</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M89.8,-374.07C90.73,-365.47 90.97,-354.81 90.55,-345.11\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"94.04,-344.81 89.82,-335.09 87.05,-345.32 94.04,-344.81\"/>\n",
        "</g>\n",
-       "<!-- start&#45;&gt;402148dbf6a54854a856761559d9bca5 -->\n",
+       "<!-- start&#45;&gt;720f5c83a1794182a600f25b701af31e -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>start&#45;&gt;402148dbf6a54854a856761559d9bca5</title>\n",
+       "<title>start&#45;&gt;720f5c83a1794182a600f25b701af31e</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M100.23,-377.27C104.02,-368.07 105.13,-355.65 103.57,-344.56\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"106.9,-343.44 101.25,-334.48 100.08,-345.01 106.9,-343.44\"/>\n",
        "</g>\n",
@@ -214,9 +214,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "32492495-d82a-45ba-87e3-80b01de38981",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -225,14 +227,14 @@
       "[  1%] Built target cmd_map_generation\n",
       "[  1%] \u001b[34m\u001b[1mGenerating ../.build_2AMi2o2xxxxxx/build/dsp_pipeline/dsp_main.c.pca.xml\u001b[0m\n",
       "[  1%] \u001b[34m\u001b[1mGenerating ../.build_1AMi2o2xxxxxx/build/dsp_pipeline/dsp_main.c.pca.xml\u001b[0m\n",
-      "[  1%] \u001b[34m\u001b[1mGenerating ../.build_2AMi2o2xxxxxx/pca.xml\u001b[0m\n",
       "[  1%] \u001b[34m\u001b[1mGenerating ../.build_1AMi2o2xxxxxx/pca.xml\u001b[0m\n",
-      "\u001b[35m\u001b[1mConsolidate compiler generated dependencies of target app_usb_aud_xk_evk_xu316_dsp_2AMi2o2xxxxxx\u001b[0m\n",
+      "[  1%] \u001b[34m\u001b[1mGenerating ../.build_2AMi2o2xxxxxx/pca.xml\u001b[0m\n",
       "\u001b[35m\u001b[1mConsolidate compiler generated dependencies of target app_usb_aud_xk_evk_xu316_dsp_1AMi2o2xxxxxx\u001b[0m\n",
+      "\u001b[35m\u001b[1mConsolidate compiler generated dependencies of target app_usb_aud_xk_evk_xu316_dsp_2AMi2o2xxxxxx\u001b[0m\n",
       "[  1%] \u001b[32mBuilding C object CMakeFiles/app_usb_aud_xk_evk_xu316_dsp_2AMi2o2xxxxxx.dir/dsp_pipeline/dsp_main.c.obj\u001b[0m\n",
       "[  1%] \u001b[32mBuilding C object CMakeFiles/app_usb_aud_xk_evk_xu316_dsp_1AMi2o2xxxxxx.dir/dsp_pipeline/dsp_main.c.obj\u001b[0m\n",
-      "[  1%] \u001b[32m\u001b[1mLinking C executable ../bin/2AMi2o2xxxxxx/app_usb_aud_xk_evk_xu316_dsp_2AMi2o2xxxxxx.xe\u001b[0m\n",
       "[  1%] \u001b[32m\u001b[1mLinking C executable ../bin/1AMi2o2xxxxxx/app_usb_aud_xk_evk_xu316_dsp_1AMi2o2xxxxxx.xe\u001b[0m\n",
+      "[  1%] \u001b[32m\u001b[1mLinking C executable ../bin/2AMi2o2xxxxxx/app_usb_aud_xk_evk_xu316_dsp_2AMi2o2xxxxxx.xe\u001b[0m\n",
       "Constraint check for tile[0]:\n",
       "  Memory available:       524288,   used:      55920 .  OKAY\n",
       "    (Stack: 3676, Code: 35044, Data: 17200)\n",
@@ -249,7 +251,7 @@
       "  Memory available:       524288,   used:      23808 .  OKAY\n",
       "    (Stack: 4540, Code: 17472, Data: 1796)\n",
       "Constraints checks PASSED.\n",
-      "[ 50%] Built target app_usb_aud_xk_evk_xu316_dsp_1AMi2o2xxxxxx\n",
+      "[ 99%] Built target app_usb_aud_xk_evk_xu316_dsp_1AMi2o2xxxxxx\n",
       "[100%] Built target app_usb_aud_xk_evk_xu316_dsp_2AMi2o2xxxxxx\n"
      ]
     }
@@ -265,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "id": "89d245d6-b908-4815-ae22-fa10e40d65dc",
    "metadata": {},
    "outputs": [
@@ -273,14 +275,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/shuchitak/sandboxes/host_xvf_control/build/xvf_host --use usb --instance-id 3 agc_gain 2.0\n"
+      "/Users/shuchitak/sandboxes/host_xvf_control/build/xvf_host --use usb --instance-id 3 agc_gain 1.0\n"
      ]
     }
    ],
    "source": [
     "# do tuning\n",
     "#pe0[\"filter_coeffs\"] = list(range(10))\n",
-    "agc1[\"gain\"] = str(2.0)\n",
+    "agc1[\"gain\"] = str(1.0)\n",
     "\n",
     "from dsp_ultra.design.pipeline import send_config_to_device\n",
     "send_config_to_device(p, \"/Users/shuchitak/sandboxes/host_xvf_control/build/xvf_host\")"
