make awesome demo

--- a/app_usb_aud_xk_evk_xu316_dsp/dsp_design.ipynb
+++ b/app_usb_aud_xk_evk_xu316_dsp/dsp_design.ipynb
@@ -18,13 +18,14 @@
     "p = Pipeline(4)\n",
     "\n",
     "with p.add_thread() as t:\n",
-    "    [pe0, pe1] = t.stages((BiquadModule, AGC), p.i)\n",
-    "  \n",
-    "with p.add_thread() as t:\n",
-    "    agc = t.stage(AGC, pe1.o)\n",
-    "    agc1 = t.stage(AGC, agc.o)\n",
+    "    ch00, ch01 = t.stages((BiquadModule, BiquadModule), p.i[:1])\n",
     "\n",
-    "p.set_outputs(agc1.o)\n",
+    "with p.add_thread() as t:\n",
+    "    ch10, ch11 = t.stages((BiquadModule, BiquadModule), p.i[1:])\n",
+    "\n",
+    "\n",
+    "\n",
+    "p.set_outputs([*ch01.o, *ch11.o])\n",
     "p.draw()\n"
    ]
   },
@@ -42,7 +43,7 @@
     "generate_dsp_main(p)\n",
     "# !cmake --build build -j\n",
     "#!xrun bin/2AMi2o2xxxxxx/app_usb_aud_xk_evk_xu316_dsp_2AMi2o2xxxxxx.xe\n",
-    "time.sleep(5)"
+    "# time.sleep(5)"
    ]
   },
   {
@@ -53,11 +54,12 @@
    "outputs": [],
    "source": [
     "# do tuning\n",
-    "#pe0[\"filter_coeffs\"] = list(range(10))\n",
-    "agc1[\"gain\"] = str(1.0)\n",
-    "\n",
+    "ch00.make_lowpass(12000, 0.7)\n",
+    "ch01.make_highpass(8000, 0.7)\n",
+    "ch10.make_lowpass(19000, 0.7)\n",
+    "ch11.make_highpass(3000, 0.7)\n",
     "from audio_dsp.design.pipeline import send_config_to_device\n",
-    "send_config_to_device(p, \"/Users/shuchitak/sandboxes/host_xvf_control/build/xvf_host\")"
+    "send_config_to_device(p, \"host_cmd_map/build/xvf_host.exe\")"
    ]
   },
   {
